--- a/kubot_manipulation/package.xml
+++ b/kubot_manipulation/package.xml
@@ -4,7 +4,7 @@
   <version>0.0.0</version>
   <description>The kubot_manipulation package</description>
 
-  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
+  <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
   <maintainer email="cem@todo.todo">cem</maintainer>
@@ -14,6 +14,7 @@
   <!-- Commonly used license strings: -->
   <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
   <license>TODO</license>
+
 
 
   <!-- Url tags are optional, but mutiple are allowed, one per tag -->
@@ -40,6 +41,8 @@
   <!-- Use test_depend for packages you need only for testing: -->
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
+  <run_depend>trac_ik</run_depend>
+  <run_depend>kubot_moveit_config</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
