--- a/kubot_moveit_config/config/ompl_planning.yaml
+++ b/kubot_moveit_config/config/ompl_planning.yaml
@@ -145,3 +145,5 @@ arm:
     - LazyPRMstarkConfigDefault
     - SPARSkConfigDefault
     - SPARStwokConfigDefault
+  projection_evaluator: joints(arm_shoulder_pan_joint,arm_shoulder_lift_joint)
+  longest_valid_segment_fraction: 0.005
