--- a/kubot_moveit_config/config/controllers.yaml
+++ b/kubot_moveit_config/config/controllers.yaml
@@ -1,5 +1,5 @@
 controller_list:
-  - name: "arm_controller"
+  - name: ""
     action_ns: follow_joint_trajectory
     type: FollowJointTrajectory
     joints:
