--- a/kubot_affordance/CMakeLists.txt
+++ b/kubot_affordance/CMakeLists.txt
@@ -6,6 +6,13 @@ project(kubot_affordance)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED)
 
+find_package(catkin REQUIRED COMPONENTS
+  roscpp
+  rospy
+  std_msgs
+  message_generation
+)
+
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
 
@@ -47,11 +54,12 @@ find_package(catkin REQUIRED)
 # )
 
 ## Generate services in the 'srv' folder
-# add_service_files(
-#   FILES
-#   Service1.srv
-#   Service2.srv
-# )
+add_service_files(
+   FILES
+   predict.srv
+   execute_action.srv
+   goto_object.srv
+ )
 
 ## Generate actions in the 'action' folder
 # add_action_files(
@@ -61,11 +69,10 @@ find_package(catkin REQUIRED)
 # )
 
 ## Generate added messages and services with any dependencies listed here
-# generate_messages(
-#   DEPENDENCIES
-#   std_msgs  # Or other packages containing msgs
-# )
-
+generate_messages(
+  DEPENDENCIES
+  std_msgs
+)
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
 ################################################
